test/passing/tests/error2.ml.err
Warning: wrap-comments: This option is deprecated since version 0.20.0. It will be removed by version 1.0.
ocamlformat: ignoring "tests/error2.ml" (syntax error)
File "tests/error2.ml", line 1, characters 0-1:
1 | "asdd
    ^
Error: String literal not terminated
